# tailor-studio

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
docs/: browserconfig.xml  humans.txt  index.html  llms.txt  manifest.json  robots.txt  sitemap.xml
docs/app/: index.html
docs/app/assets/: cssMode-B6ioFG9m.js  cssMode-BKPu2uSn.js  cssMode-BtgCbx_K.js  cssMode-DNOYcRwd.js  cssMode-DnYsdMm3.js  cssMode-DzcqljZX.js  freemarker2-Bes0Vo7H.js  freemarker2-COXHm0jC.js  freemarker2-CQu8616h.js  freemarker2-CvGDah51.js  freemarker2-D00JBsCN.js  freemarker2-DSIwtgqP.js  handlebars-1i-f8fPi.js  handlebars-CEmlI1HS.js  handlebars-DWxzn2uE.js  handlebars-I3mC_U4R.js  handlebars-h8h6UQV7.js  handlebars-rLBKk-w7.js  html-B5Xa7kQt.js  html-BzXE62BM.js  html-CF2uMDVr.js  html-DTVKuUsJ.js  html-RobTl8Tt.js  (+81 more)
scripts/: generate-icon.mjs  screenshot.mjs
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/composables/: useFieldI18n.ts  useMediaQuery.ts  useProjectIO.ts  useResizable.ts
src/data/: fieldDefinitions.ts  mockBlueprints.ts  octoberIcons.ts  templates.ts
src/generator/: yamlGenerator.ts
src/i18n/: en.ts  index.ts  sk.ts
src/parser/: yamlParser.ts
src/stores/: blueprints.ts  projects.ts  settings.ts  ui.ts
src/types/: blueprint.ts  field.ts  index.ts
src/utils/: factory.ts  handle.ts  id.ts
(+29 files in other folders)
