[package]
name = "tailor-studio"
version = "0.1.0"
description = "A visual builder for OctoberCMS Tailor blueprints"
authors = ["Tailor Studio"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tailor_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
